@@ -19,6 +19,10 @@ The Grinder 3.4 (not yet released)
    Fix bug 2919190 - setTimeout method does not effect read timeouts.
    Thanks to Hitoshi Amano for the report and the fix.
 
+   Fulfil feature request 2923975 - added valuesFromHiddenInput() and
+   valuesFromBodyURI() methods to HTTPUtilities. Thanks to Anil Jacob
+   for the request.
+
 
 The Grinder 3.3
 ---------------
